--- a/Views/SiteList.xaml
+++ b/Views/SiteList.xaml
@@ -4,67 +4,71 @@
              x:Class="PM2E2GRUPO2.Views.SiteList"
              Title="Sitios">
     <StackLayout>
-        <SearchBar Placeholder="Buscar"
-               
+
+        <Frame CornerRadius="10" Padding="10" Margin="0,10" BackgroundColor="#f9f9f9">
+            <VerticalStackLayout Spacing="10">
+                <SearchBar Placeholder="Buscar" 
                    Margin="0,5,0,5"/>
 
-        <ListView x:Name="siteList"
+                <ListView x:Name="siteList"
                   HasUnevenRows="True"
                   HeightRequest="550"
                   ItemTapped="OnSeleccionarElemento"
                   >
-            <ListView.ItemTemplate>
-                <DataTemplate>
-                    <ViewCell>
-                        <Grid HeightRequest="50">
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="*" />
-                                <ColumnDefinition Width="40" />
-                                <ColumnDefinition Width="40" />
-                                <ColumnDefinition Width="40" />
-                            </Grid.ColumnDefinitions>
-                           
-                            <StackLayout Grid.Column="0" Margin="0,10,0,0">
-                                <Label Text="{Binding Descripcion}" FontSize="Small"/>
-                            </StackLayout>
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <ViewCell>
+                                <Grid HeightRequest="50">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="*" />
+                                        <ColumnDefinition Width="40" />
+                                        <ColumnDefinition Width="40" />
+                                        <ColumnDefinition Width="40" />
+                                    </Grid.ColumnDefinitions>
 
-                            <Button
+                                    <StackLayout Grid.Column="0" Margin="0,10,0,0">
+                                        <Label Text="{Binding Descripcion}" FontSize="Small"/>
+                                    </StackLayout>
+
+                                    <Button
                                  Text="🎥"
                                  BackgroundColor="Transparent"
                                  Clicked="OnPlayVideoClicked"
                                  Grid.Column="1"/>
-                            <Button
+                                    <Button
                                  Text="🎙️"
                                  BackgroundColor="Transparent"
                                  Clicked="OnPlayAudioClicked"
                                  Grid.Column="2"/>
 
-                            <Button 
+                                    <Button 
                                  Text="📍"
                                  BackgroundColor="Transparent"
                                  Clicked="OnLocationClicked"
                                  Grid.Column="3"
                             />
+                                </Grid>
+                            </ViewCell>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+            </VerticalStackLayout>
+        </Frame>
+        <Frame CornerRadius="10" Padding="10" Margin="0,10" BackgroundColor="#f9f9f9">
+            <HorizontalStackLayout Spacing="25" HorizontalOptions="Center">
 
-                        </Grid>
-                    </ViewCell>
-                </DataTemplate>
-            </ListView.ItemTemplate>
-        </ListView>
-
-        <HorizontalStackLayout Spacing="25" HorizontalOptions="Center" Margin="0,-15,0,15">
-            
-            <Button 
+                <Button 
                  Text="✏️ Actualizar"
                 Clicked="OnActualizarClicked"
                  BackgroundColor="#34c759"/>
 
-            <Button 
+                <Button 
                   Text="🗑️ Eliminar"
                   Clicked="OnEliminarClicked"
                   BackgroundColor="#ff9500"/>
-            
-        </HorizontalStackLayout>
+
+            </HorizontalStackLayout>
+        </Frame>
        
     </StackLayout>
 </ContentPage>
