--- a/Views/SiteList.xaml
+++ b/Views/SiteList.xaml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+             xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="PM2E2GRUPO2.Views.SiteList"
              Title="Sitios">
     <StackLayout>
         <SearchBar Placeholder="Buscar"
-               
+                   TextChanged="OnSearchBarTextChanged"
                    Margin="0,5,0,5"/>
 
         <ListView x:Name="siteList"
@@ -53,7 +54,7 @@
         </ListView>
 
         <HorizontalStackLayout Spacing="25" HorizontalOptions="Center" Margin="0,-15,0,15">
-            
+
             <Button 
                  Text="✏️ Actualizar"
                 Clicked="OnActualizarClicked"
@@ -63,8 +64,8 @@
                   Text="🗑️ Eliminar"
                   Clicked="OnEliminarClicked"
                   BackgroundColor="#ff9500"/>
-            
+
         </HorizontalStackLayout>
-       
+
     </StackLayout>
 </ContentPage>
